<resources>
    <string name="app_name">SportNews</string>
    <string name="todo">Todo</string>
    <string name="sport_news">Sport News</string>
    <string name="title_news">Title news</string>
    <string name="author">Author</string>
    <string name="release_date">release date</string>
    <string name="relase_date">relase date</string>
    <string name="content">Content</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="Powered"><![CDATA[Powered by BWP & GSG]]></string>
    <string name="search_hint" />
    <string name="app_label" />
</resources>
